# mateablecoin-24.x

./: .cirrus.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
build_msvc/: .gitignore  README.md  bitcoin.sln  bitcoin_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-tx.bash-completion  bitcoind.bash-completion  filter-lcov.py  install_db4.sh
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-empty-template.md  release-process.md  shared-libraries.md  tor.md  tracing.md  translation_process.md  (+2 more)
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  addrdb.cpp  (+155 more)
(+1364 files in other folders)
