dist_man1_MANS=

if BUILD_MATEABLED
  dist_man1_MANS+=mateabled.1
endif

if ENABLE_QT
  dist_man1_MANS+=mateable-qt.1
endif

if BUILD_MATEABLE_CLI
  dist_man1_MANS+=mateable-cli.1
endif

if BUILD_MATEABLE_TX
  dist_man1_MANS+=mateable-tx.1
endif

if BUILD_MATEABLE_UTIL
  dist_man1_MANS+=mateable-util.1
endif

if ENABLE_WALLET
if BUILD_MATEABLE_WALLET
  dist_man1_MANS+=mateable-wallet.1
endif
endif
